navbar fix bug1

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
     <title>Argo Advertising Group</title>
 </head>
 <body>
-    <div class="nav__button"><img src="./nav-icon/home q.png" alt=""></div>
+    <div class="nav__button">
+  <img src="./nav-icon/home q.png" alt="">
+</div>
   <div class="mobileHeader">
     <div class="mobileHeader__poster">Argo</div>
     <div class="mobileHeader__navbtn"></div>
